<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/totalAmountLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/total_amount_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalAmountValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:layout_marginLeft="4sp"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/paymentsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="14sp"
            android:text="@string/payments_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/paymentItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>

        <TextView
            android:id="@+id/noPaymentLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_payment" />

        <Button
            android:id="@+id/addPaymentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:gravity="left|center_vertical"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/add_payment_button_label"
            android:textAllCaps="false"
            android:textColor="@color/dodger_blue"
            app:elevation="0sp"
            app:iconPadding="0sp" />

        <Button
            android:id="@+id/savePaymentsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/save_payments_background"
            android:text="@string/save_button"
            android:textColor="@color/black"
            android:layout_gravity="center|center_vertical"
            android:paddingHorizontal="60dp"
            app:backgroundTint="@null" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>