<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/paymentFormHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_payment_header_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:gravity="left"
            android:minHeight="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currencySymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="0"
                android:text="@string/rupee_currency_lable"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textColorHint="#E6E6E6"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputPaymentAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:padding="8dp"
                android:background="@drawable/input_border"
                android:ems="10"
                android:hint="@string/pamyment_amount_hint"
                android:inputType="numberSigned"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="left"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/paymentTypeOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/input_border"
                android:minHeight="40dp"
                android:layout_weight="0"
                android:layout_gravity="center"
                android:spinnerMode="dropdown" />

            <ImageButton
                android:id="@+id/dropDownButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:minWidth="24dp"
                android:minHeight="24dp"
                android:backgroundTint="@color/black"
                android:layout_gravity="center|center_vertical"
                android:background="@drawable/ic_baseline_arrow_drop_down_24" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/addtitionalInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/paymentProviderInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="8dp"
                android:background="@drawable/input_border"
                android:hint="@string/pamyment_provider_hint"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:layout_marginBottom="12dp"
                android:textColorHint="@color/gray" />

            <EditText
                android:id="@+id/transactionReferenceInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="@drawable/input_border"
                android:hint="@string/pamyment_transaction_reference_hint"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:padding="8dp"
                android:textColorHint="@color/gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="right|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/cancel_button"
                android:textColor="#A3000000"
                app:backgroundTint="#00FFFFFF"
                app:elevation="0dp"
                android:textAllCaps="true"/>

            <Button
                android:id="@+id/okButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="0"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="8dp"
                android:paddingBottom="4dp"
                android:text="@string/okay_button_label"
                app:backgroundTint="#FF1E90FF"
                android:textAllCaps="true"/>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>